--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lucky Travel Agency</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <h1> <a href="index.html" class="logo">Lucky Travel</a></h1>
+        <div class="nav-links">
+            <a href="#home">Home</a>
+            <a href="">Destinations</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+        </div>
+    </nav>
 
+    <div class="heading">
+        <div class="heading-content">
+            <h2>Discover Your Next Adventure</h2>
+            <p>Explore breathtaking destinations around the world</p>
+            <button class="buttonheading-button">Start Browsing</button>
+        </div>
+    </div>
+
+    <section class="destinations">
+        <h3>Top Asian Destinations</h3>
+        <div class="destination-grid">
+            <a href="japan.html" class="destination-card">
+                <img src="images/japan-home.jpg" alt="Japan">
+                <div class="card-content">
+                    <h4>Japan</h4>
+                    <p>Experience the perfect blend of tradition and modern technology</p>
+                </div>
+            </a>
+
+            <a href="bali.html" class="destination-card">
+                <img src="images/indonesia-home.jpg" alt="Bali">
+                <div class="card-content">
+                    <h4>Indonesia</h4>
+                    <p>Discover pristine beaches, temples, and rich cultural heritage</p>
+                </div>
+            </a>
+
+            <a href="thailand.html" class="destination-card">
+                <img src="images/thailand-home.jpg" alt="Thailand">
+                <div class="card-content">
+                    <h4>Thailand</h4>
+                    <p>Explore vibrant street life and ornate temples</p>
+                </div>
+            </a>
+        </div>
+
+        <div class="destination-grid">
+            <a href="vietnam.html" class="destination-card">
+                <img src="images/vietnam-home.jpg" alt="Vietnam">
+                <div class="card-content">
+                    <h4>Vietnam</h4>
+                    <p>Cruise through limestone islands and emerald waters</p>
+                </div>
+            </a>
+
+            <a href="singapore.html" class="destination-card">
+                <img src="images/singapore-home.jpg" alt="Singapore">
+                <div class="card-content">
+                    <h4>Singapore</h4>
+                    <p>Ultra-modern architecture meets lush gardens and diverse culture</p>
+                </div>
+            </a>
+
+            <a href="korea.html" class="destination-card">
+                <img src="images/korea-home.jpg" alt="South Korea">
+                <div class="card-content">
+                    <h4>South Korea</h4>
+                    <p>K-culture, historic palaces, and cutting-edge fashion</p>
+                </div>
+            </a>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; Lance Samaniego & Michelle Mondelo</p>
+    </footer>
+</body>
+</html>
